[project]
name = "e-court-scraper"
version = "0.1.0"
description = "High-performance REST API for accessing Indian e-Courts data with JWT authentication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pycryptodome>=3.20.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.12",
]

[project.urls]
Homepage = "https://github.com/amanverma-765/e-court-scraper"
Repository = "https://github.com/amanverma-765/e-court-scraper"

[project.scripts]
e-court-api = "run_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "scraper", "utils"]

[dependency-groups]
dev = []

[tool.uv]
# uv-specific configuration

[tool.uv.sources]
